Makes delay commitText/setComposition can deal with empty text/composition.

BUG=668036

Review-Url: https://codereview.chromium.org/2525723005
Cr-Commit-Position: refs/heads/master@{#434426}

Former-commit-id: 89a156914461e445488deeca97a453997540e010